--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en>
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,5 +8,6 @@
 </head>
 <body>
   <h1>Hello World</h1>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt maxime atque doloribus minus nobis dolores amet quod expedita natus corrupti at necessitatibus tempore, ab optio et possimus enim ad cum?</p>
 </body>
 </html>
