--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Dapunta</title>
 </head>
 <body>
-  <h1>Hello World</h1>
+  <h1>Hallo Dunia</h1>
   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt maxime atque doloribus minus nobis dolores amet quod expedita natus corrupti at necessitatibus tempore, ab optio et possimus enim ad cum?</p>
 </body>
 </html>
