--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
   <h1>Hallo Dunia</h1>
   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt maxime atque doloribus minus nobis dolores amet quod expedita natus corrupti at necessitatibus tempore, ab optio et possimus enim ad cum?</p>
+  <h2>Read More</h2>
 </body>
 </html>
