--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <h1>Hallo Dunia</h1>
   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt maxime atque doloribus minus nobis dolores amet quod expedita natus corrupti at necessitatibus tempore, ab optio et possimus enim ad cum?</p>
   <h2>Read More</h2>
+  <h3>Connect with us</h3>
   <button>Submit</button>
 </body>
 </html>
